
~ upcoming
	* Change: accessories on lemmatize and automatons
	* Change: ukraine charset adapters (determine language in swallow)
	* Change: volapuk charset adapters (nelly offered a great name some days ago)

~ Mon Sep 21 2009 libturglem-0.2.29
	* Change: syntax error in lemc.cpp

~ Tue Sep 01 2009 libturglem-0.2.28
	* Change: suddenly human readable output support in auto_utility

~ Thu Aug 27 2009 libturglem-0.2.27
	* Change: del ПЛАТ(32) МАШИН(33) ЗАЛО(49) МЕТОДА(50) ПОДБОРА(50) ПОЛИВА(50) ТУРА(50)
	* Change: del АД БЕЛА(59) КОЛОНОК(101) БЕЛ(158) КОЛОНОК(170) БАЗ(2363) ОСЯ(2498)
	* Change: add ВНУТРЕДНЕВНЫЙ(0) АВТОГРУЗОПРЕВОЗКА(15) АВИАПЕВОЗКА(XXX15) АВИАПЕРРЕВОЗКА(XXX15) АВТОТЕСТ(32)
	* Change: add АБДОМИНОПЛАСТИКА(39) АКВАРИУМИСТИКА(39) КОЛ-ВО(49) АБОНПЛАТА(50) ЦЕЛЮЛИТ(186)

~ Thu Aug 27 2009 libturglem-0.2.26
	* Change: del part of speech #11 [aka paradigm #2000, lemm РАДИ]
	* Change: del paradigms without any lemmas
	* Change: del ГАЗПРОМ-МЕДИА НЕУБИВАЙМЕНЯ as dignitysuckers
	* Change: del БЕРЛИНА ВНУКА РАКА СТЕН ТРУСИК as archaic delusion
	* Change: del ВОД ПОД as just-have-to-go defect
	* Change: del Е|Ё indifference consequences and some effects of the removal itself
	* Change: add БАНЕР ГЕРБЕРА ДЕМО МАЛЬДИВЫ ОНЛАЙН ПЕЖО ФИТНЕС ФИТНЕСС ЦЕЛЛЮЛИТ by prediction fixes
	* Change: fix ТРАФИК ТРАФФИК (now plural number only)

~ Thu Aug 27 2009 libturglem-0.2.25
	* Change: clever default_*_adapter (on delimiter hell case)

~ Mon Aug 24 2009 libturglem-0.2.22
	* Change: <ADAPTER>_BUFFER_SIZE definition

~ Thu Aug 20 2009 libturglem-0.2.21
	* Change: dump_automat tool renamed to auto_utility
	* Change: auto_utility dump with three filter types (one is broken)
	* Change: auto_utility word or file as source
	* Change: auto_utility adapter flag

~ Thu Aug 20 2009 libturglem-0.2.20
	* Change: show decimal digits instead of hex grammem bitmaps

~ Wed Aug 19 2009 libturglem-0.2.19
	* Change: dump_automat tool helpful in using *.auto

~ Wed Aug 19 2009 libturglem-0.2.18