@@ -1,8 +1,11 @@
 CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
 PROJECT (libturglem)
 
-SET (LIBTURGLEM_VERSION 0.2.29)
-SET (LIBTURGLEM_RPM_RELEASE 29)
+SET (LIBTURGLEM_VERSION 0.2.30)
+SET (LIBTURGLEM_RPM_RELEASE 30)
+
+SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC -pipe -O3 -fomit-frame-pointer -funroll-loops -DNDEBUG -Wall -Werror")
+SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_C_FLAGS} -Wno-deprecated")
 
 SET (FIND_LIBRARY_USE_LIB64_PATHS TRUE)
 SET (CMAKE_FIND_LIBRARY_SUFFIXES ${CMAKE_STATIC_LIBRARY_SUFFIX})
